--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "alpinejs": "^3.14.9",
     "astro": "^5.11.0",
     "tailwindcss": "^4.1.11"
+  },
+  "devDependencies": {
+    "daisyui": "^5.0.46"
   }
 }
