--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@astrojs/alpinejs": "^0.4.8",
+    "@fontsource-variable/roboto": "^5.2.6",
+    "@fontsource-variable/roboto-mono": "^5.2.6",
     "@tailwindcss/vite": "^4.1.11",
     "@types/alpinejs": "^3.13.11",
     "alpinejs": "^3.14.9",
