--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@alpinejs/persist": "^3.14.9",
     "@astrojs/alpinejs": "^0.4.8",
     "@fontsource-variable/roboto": "^5.2.6",
     "@fontsource-variable/roboto-mono": "^5.2.6",
@@ -19,6 +20,7 @@
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
+    "@types/alpinejs__persist": "^3.13.4",
     "daisyui": "^5.0.46"
   }
 }
